issue has been resolve of items pizza is not in center align

--- a/app/home/categories/pizza/pizzacart.css
+++ b/app/home/categories/pizza/pizzacart.css
@@ -1,3 +1,10 @@
+.item-main-pizza {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 /* pizza image screen radius for mobile and desktop */
 .pizza-image-m {
   border-radius: 0px;
@@ -47,21 +54,37 @@
     margin-right: auto;
   }
 }
+
+@media screen and (min-width: 280px) and (max-width: 318px) {
+  .pizza-price {
+    font-size: 10.5px;
+    margin-left: 0.4rem;
+    font-weight: bolder;
+  }
+  .main-pizza-price {
+    margin-top: 4rem;
+  }
+}
+@media screen and (min-width: 318px) and (max-width: 360px) {
+  .pizza-price {
+    font-size: 12px;
+    margin-left: 0.4rem;
+    font-weight: bolder;
+  }
+  .main-pizza-price {
+    margin-top: 3rem;
+  }
+}
 @media screen and (min-width: 280px) and (max-width: 360px) {
   .item-background {
     padding-left: 1px;
     padding-right: 1px;
   }
-  .pizza-price {
-    font-size: 10.5px;
-    margin-top: 1rem;
-  }
+
   .cont-pizza {
     margin-bottom: 13.5rem;
   }
-  .main-pizza-price {
-    margin-top: 2.2rem;
-  }
+
   .desc-pizza {
     font-size: 12px;
   }
@@ -74,12 +97,12 @@
   margin-top: -2rem;
 }
 
-@media screen and (min-width: 320px) and (max-width: 352px) {
+/* @media screen and (min-width: 320px) and (max-width: 352px) {
   .pizza-price {
     margin-top: -1.6rem;
     margin-left: 0.8rem;
   }
-}
+} */
 
 @media screen and (min-width: 415px) and (max-width: 352px) {
   .main-pizza-price {
@@ -91,7 +114,7 @@
     margin-bottom: 12rem;
   }
 }
-@media screen and (min-width: 361px) and (max-width: 408px) {
+@media screen and (min-width: 361px) and (max-width: 410px) {
   .pizza-price {
     margin-top: 1rem;
   }
